--- a/workspace/sica-ativos/src/main/resources/templates/index.html
+++ b/workspace/sica-ativos/src/main/resources/templates/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org">
+
 <head lang="en">
-    <meta charset="UTF-8"/>
+    <meta charset="utf-8" />
+    <link rel="icon" href="./favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="SICA - Módulo Ativos" />
+
     <title>Sistema de Controle Ambiental (SICA) - Módulo Ativos</title>
-    <link rel="stylesheet" href="/main.css" />
+
+    <link rel="apple-touch-icon" href="./img/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="./manifest.json" />
 </head>
+
 <body>
+    <noscript>É necessário ter JavaScript habilitado para executar esta aplicação.</noscript>
+    <div id="app"></div>
 
-    <div id="react"></div>
-
-    <script src="built/bundle.js"></script>
+    <script src="./built/bundle.js"></script>
 
 </body>
+
 </html>
