[Ativos] Ajustes no Front-end
- Separando configuração do Webpack de dev e prd
- Adicionando plugin de Clean do Webpack

--- a/workspace/sica-ativos/src/main/resources/templates/index.template.html
+++ b/workspace/sica-ativos/src/main/resources/templates/index.template.html
@@ -31,6 +31,6 @@
 	<noscript>É necessário ter JavaScript habilitado para executar esta aplicação.</noscript>
 	<div id="app"></div>
 
-<script src="./built/bundle.js?331785992ef4ce5f6213"></script></body>
+</body>
 
 </html>
