--- a/workspace/sica-ativos/src/main/resources/templates/index.template.html
+++ b/workspace/sica-ativos/src/main/resources/templates/index.template.html
@@ -22,8 +22,7 @@
     -->
 <link rel="manifest" href="./manifest.json" />
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-	integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
 </head>
 
