--- a/workspace/sica-seguranca/src/main/resources/templates/index.template.html
+++ b/workspace/sica-seguranca/src/main/resources/templates/index.template.html
@@ -10,9 +10,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#000000" />
-<meta name="description" content="SICA - Módulo Monitoramento" />
+<meta name="description" content="SICA - Módulo Segurança e Comunicação" />
 
-<title>Sistema de Controle Ambiental (SICA) - Módulo Monitoramento</title>
+<title>Sistema de Controle Ambiental (SICA) - Módulo Segurança e Comunicação</title>
 
 <link rel="icon" href="./favicon.ico" />
 <link rel="apple-touch-icon" href="./img/logo192.png" />
