--- a/workspace/sica-portal-web/src/main/resources/static/css/index.css
+++ b/workspace/sica-portal-web/src/main/resources/static/css/index.css
@@ -1,3 +1,7 @@
+hmlt {
+	overflow-y: hidden;
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
