--- a/workspace/sica-portal-web/src/main/resources/static/css/index.css
+++ b/workspace/sica-portal-web/src/main/resources/static/css/index.css
@@ -8,3 +8,22 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+#background-overlay {
+	width: 100%;
+}
+
+#background-overlay::after {
+	background: #be8e44 url(../img/background.png) no-repeat fixed center center;
+	background-size: cover;
+	content: "";
+	opacity: 0.8;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	position: absolute;
+	z-index: -1;
+	width: 100%;
+	height: 100%;
+}
