--- a/workspace/sica-portal-web/src/main/resources/static/css/App.css
+++ b/workspace/sica-portal-web/src/main/resources/static/css/App.css
@@ -48,15 +48,15 @@
 }
 
 .carregando {
-    width: 30rem;
-    height: 30rem;
+    width: 30vw;
+    height: 30vw;
     float: left;
     position: absolute;
     z-index: 5;
-    border-width: 4em;
+    border-width: 5vw;
     opacity: 0.8;
     left: 50%;
-    margin-left: -15rem;
+    margin-left: -15vw;
     top: 50%;
-    margin-top: -15rem;
+    margin-top: -15vw;
 }
